tests/miniJava/neg/006813_mutation.MiniJava
class Main { public static void Main ( String [ ] java ) { { } } }
